modify payload, add buildDuration property

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
@@ -21,15 +21,15 @@
         "title": "Build URL",
         "description": "URL to the build"
       },
-      "jobName": {
-        "type": "string",
-        "title": "Job phase",
-        "description": "The stage of the job"
+      "buildDuration": {
+        "type": "number",
+        "title": "Build duration",
+        "description": "Duration of the build"
       },
       "timestamp": {
         "type": "string",
         "title": "Timestamp",
-        "description": "The timestamp of the build"
+        "description": "Last updated timestamp of the build"
       }
     },
     "required": []
