--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_job_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_job_blueprint.mdx
@@ -23,7 +23,7 @@
       "timestamp": {
         "type": "string",
         "title": "Timestamp",
-        "description": "The timestamp of the job"
+        "description": "Last updated timestamp of the job"
       }
     },
     "required": []
