fix codefresh and azure pipelines

--- a/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/codefresh-workflow-template/examples.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/codefresh-workflow-template/examples.mdx
@@ -11,7 +11,7 @@ In this example you will create blueprints for `ciJob` and `image` entities, and
 
 <ExampleCiJobBlueprint />
 
-After creating the blueprint, you can add the following snippet to your Codefresh workflow template `yml` file to create the new build entity in your Codefresh CI:
+After creating the blueprint, you can add the following snippet to your Codefresh workflow template `yml` file to create the new ciJob entity in your Codefresh CI:
 
 ```yaml showLineNumbers
 - name: entity-upsert
