--- a/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/codefresh-workflow-template/examples.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/codefresh-workflow-template/examples.mdx
@@ -121,6 +121,8 @@ spec:
                   "unitTestCoverage": "50",
                 }
           - name: entity-upsert-cijob
+            dependencies:
+              [entity-upsert-image]
             templateRef:
               name: port
               template: entity-upsert
