apply changes to webhook based on code review

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comment_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comment_webhook_configuration.mdx
@@ -6,7 +6,7 @@
   "icon": "Sentry",
   "mappings": [
     {
-      "blueprint": "sentryComments",
+      "blueprint": "sentryComment",
       "entity": {
         "identifier": ".body.data.comment_id",
         "title": "Comment Event",
@@ -18,7 +18,7 @@
           "timestamp": ".body.data.timestamp"
         },
         "relations": {
-          "sentryIssuesEvent": ".body.data.issue_id | tostring"
+          "sentryIssue": ".body.data.issue_id | tostring"
         }
       }
     }
