change relation name, add more formatting, fix webhook title and more

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
@@ -28,6 +28,7 @@
       },
       "timestamp": {
         "type": "string",
+        "format": "date-time",
         "title": "Timestamp",
         "description": "Last updated timestamp of the build"
       }
@@ -37,7 +38,7 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "belongsTo": {
+    "jenkinsJob": {
       "title": "Belongs to",
       "target": "jenkinsJob",
       "required": false,
