--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_job_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_job_blueprint.mdx
@@ -22,6 +22,7 @@
       },
       "timestamp": {
         "type": "string",
+        "format": "date-time",
         "title": "Timestamp",
         "description": "Last updated timestamp of the job"
       }
