--- a/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/codefresh-workflow-template/examples.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/codefresh-workflow-template/examples.mdx
@@ -81,7 +81,7 @@ metadata:
   name: port.codefresh-complete-example.0.0.1
   annotations:
     port/version: "0.0.1"
-    port/description: "This Workflow Template is used to create a image entity, a ciJob entity and then print the JSON of the new image"
+    port/description: "This Workflow Template is used to create an image entity, a ciJob entity and then print the JSON of the new image"
 spec:
   arguments:
     parameters:
