Docs Sentry Issues and Comments Relations (#269)
* Add Gitlab CI Pipeline docs to Port

* documentation on creating webhook for sentry

* apply suggestions and comments from code review

* add relations to sentry comments and issues event

* remove redundant comment_id and issue_id from blueprint

* apply changes to webhook based on code review

* update content on sentry relation section

---------

Co-authored-by: Daniel Sinai <daniel.sinai.main@gmail.com>

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comment_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comment_webhook_configuration.mdx
@@ -6,7 +6,7 @@
   "icon": "Sentry",
   "mappings": [
     {
-      "blueprint": "sentryComments",
+      "blueprint": "sentryComment",
       "entity": {
         "identifier": ".body.data.comment_id",
         "title": "Comment Event",
@@ -14,9 +14,11 @@
           "action": ".body.action",
           "comment": ".body.data.comment",
           "project": ".body.data.project_slug",
-          "comment_id": ".body.data.comment_id",
           "issue_id": ".body.data.issue_id",
           "timestamp": ".body.data.timestamp"
+        },
+        "relations": {
+          "sentryIssue": ".body.data.issue_id | tostring"
         }
       }
     }
