--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comments_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comments_blueprint.mdx
@@ -1,42 +1,44 @@
 ```json showLineNumbers
 {
-    "identifier": "sentryComments",
-    "description": "This blueprint represents a Sentry comment webhook in our software catalog",
-    "title": "Sentry Issue Comments",
-    "icon": "Sentry",
-    "schema": {
-      "properties": {
-        "action": {
-          "type": "string",
-          "title": "action"
-          "enum": ["created", "updated", "deleted"]
-        },
-        "comment": {
-          "type": "string",
-          "title": "Comment"
-        },
-        "project": {
-          "type": "string",
-          "title": "Project Slug"
-        },
-        "comment_id": {
-          "type": "string",
-          "title": "Comment ID"
-        },
-        "issue_id": {
-          "type": "string",
-          "title": "Issue ID"
-        },
-        "timestamp": {
-          "type": "string",
-          "title": "Comment Timestamp"
-        }
+  "identifier": "sentryComment",
+  "description": "This blueprint represents a Sentry comment in our software catalog",
+  "title": "Sentry Comment",
+  "icon": "Sentry",
+  "schema": {
+    "properties": {
+      "action": {
+        "type": "string",
+        "title": "action",
+        "enum": ["created", "updated", "deleted"]
       },
-      "required": []
+      "comment": {
+        "type": "string",
+        "title": "Comment"
+      },
+      "project": {
+        "type": "string",
+        "title": "Project Slug"
+      },
+      "issue_id": {
+        "type": "string",
+        "title": "Issue ID"
+      },
+      "timestamp": {
+        "type": "string",
+        "title": "Comment Timestamp"
+      }
     },
-    "mirrorProperties": {},
-    "calculationProperties": {},
-    "relations": {}
+    "required": []
+  },
+  "mirrorProperties": {},
+  "calculationProperties": {},
+  "relations": {
+    "sentryIssue": {
+      "title": "Issue",
+      "target": "sentryIssue",
+      "required": false,
+      "many": false
+    }
   }
-
+}
 ```
