configure dynatrace problems, add relations, write docs

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_blueprint.mdx
@@ -17,25 +17,28 @@
       },
       "details": {
         "type": "string",
-        "title": "Detail text"
+        "title": "Detail Text"
       },
       "impact": {
         "type": "string",
-        "title": "Problem impact"
+        "title": "Problem Impact"
       },
       "severity": {
         "type": "string",
-        "title": "Problem severity"
-      },
-      "impactedEntity": {
-        "type": "array",
-        "title": "Impacted Entities"
+        "title": "Problem Severity"
       }
     },
     "required": []
   },
   "mirrorProperties": {},
   "calculationProperties": {},
-  "relations": {}
+  "relations": {
+    "microservice": {
+      "title": "Impacted Services",
+      "target": "microservice",
+      "required": false,
+      "many": true
+    }
+  }
 }
 ```
