--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_webhook_configuration.mdx
@@ -15,15 +15,15 @@
           "url": ".body.ProblemURL",
           "details": ".body.ProblemDetailsText",
           "impact": ".body.ProblemImpact",
-          "impactedEntity": ".body.ImpactedEntity",
           "severity": ".body.ProblemSeverity"
+        },
+        "relations": {
+          "microservice": ".body.ImpactedEntities[].entity"
         }
       }
     }
   ],
   "enabled": true,
-  "security": {
-    "secret": "WEBHOOK_SECRET"
-  }
+  "security": {}
 }
 ```
