change Jenkins job relation title

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
@@ -39,7 +39,7 @@
   "calculationProperties": {},
   "relations": {
     "jenkinsJob": {
-      "title": "Belongs to",
+      "title": "Jenkins Job",
       "target": "jenkinsJob",
       "required": false,
       "many": false
