--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
@@ -21,16 +21,16 @@
         "title": "Build URL",
         "description": "URL to the build"
       },
-      "buildDuration": {
-        "type": "number",
-        "title": "Build duration",
-        "description": "Duration of the build"
-      },
       "timestamp": {
         "type": "string",
         "format": "date-time",
         "title": "Timestamp",
         "description": "Last updated timestamp of the build"
+      },
+      "buildDuration": {
+        "type": "number",
+        "title": "Build duration",
+        "description": "Duration of the build"
       }
     },
     "required": []
@@ -39,7 +39,7 @@
   "calculationProperties": {},
   "relations": {
     "jenkinsJob": {
-      "title": "Jenkins Job",
+      "title": "Belongs to",
       "target": "jenkinsJob",
       "required": false,
       "many": false
