--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
@@ -8,7 +8,7 @@
     "properties": {
       "buildStatus": {
         "type": "string",
-        "title": "Build status",
+        "title": "Build Status",
         "enum": ["SUCCESS", "FAILURE", "UNSTABLE"],
         "enumColors": {
           "SUCCESS": "green",
@@ -29,7 +29,7 @@
       },
       "buildDuration": {
         "type": "number",
-        "title": "Build duration",
+        "title": "Build Duration",
         "description": "Duration of the build"
       }
     },
@@ -39,7 +39,7 @@
   "calculationProperties": {},
   "relations": {
     "jenkinsJob": {
-      "title": "Belongs to",
+      "title": "Jenkins Job",
       "target": "jenkinsJob",
       "required": false,
       "many": false
