modify dynatrace webhook based on code review

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_blueprint.mdx
@@ -17,7 +17,7 @@
       },
       "details": {
         "type": "string",
-        "title": "Detail Text"
+        "title": "Details"
       },
       "impact": {
         "type": "string",
@@ -26,6 +26,13 @@
       "severity": {
         "type": "string",
         "title": "Problem Severity"
+      },
+      "tags": {
+        "type": "array",
+        "items": {
+          "type": "string"
+        },
+        "title": "Tags"
       }
     },
     "required": []
