--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_webhook_configuration.mdx
@@ -15,10 +15,11 @@
           "url": ".body.ProblemURL",
           "details": ".body.ProblemDetailsText",
           "impact": ".body.ProblemImpact",
-          "severity": ".body.ProblemSeverity"
+          "severity": ".body.ProblemSeverity",
+          "tags": ".body.ProblemTags | split(\", \")"
         },
         "relations": {
-          "microservice": ".body.ImpactedEntities[].entity"
+          "microservice": "[.body.ImpactedEntities[].entity]"
         }
       }
     }
