update Dynatrace ProblemID and more

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/dynatrace/_example_dynatrace_problem_webhook_configuration.mdx
@@ -8,7 +8,7 @@
     {
       "blueprint": "dynatraceProblem",
       "entity": {
-        "identifier": ".body.ProblemID | tostring",
+        "identifier": ".body.PID | tostring",
         "title": ".body.ProblemTitle",
         "properties": {
           "state": ".body.State",
