--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_webhook_configuration.mdx
@@ -23,7 +23,7 @@
       "blueprint": "jenkinsBuild",
       "filter": ".body.type | startswith(\"run\")",
       "entity": {
-        "identifier": ".body.data.fullDisplayName | sub(\"#\"; \" \"; \"g\")",
+        "identifier": ".body.data.fullDisplayName | sub(\" \"; \"-\"; \"g\") | sub(\"#\"; \"\"; \"g\")",
         "title": ".body.data.displayName",
         "properties": {
           "buildStatus": ".body.data.result",
