Docs jenkins webhook (#277)
* Add Gitlab CI Pipeline docs to Port

* documentation on creating webhook for sentry

* apply suggestions and comments from code review

* Add jenkins webhook to docs

* create Jenkins relational blueprint and webhook config

* add the Jenkins job and build relation docs

* modify webhook payload, add enum and colorization

* modify payload, add buildDuration property

* change relation name, add more formatting, fix webhook title and more

* add multiple blueprint to one webhook url

* change Jenkins job relation title

* change Jenkins plugin to generic events, modify docs, test integration

* fix push error

* remove jobUrl from webhook config - not needed anymore

* make changes to job and build relation

* correctly format Jenkins build identifier

---------

Co-authored-by: Mor Paz <mor@getport.io>

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
@@ -8,7 +8,7 @@
     "properties": {
       "buildStatus": {
         "type": "string",
-        "title": "Build status",
+        "title": "Build Status",
         "enum": ["SUCCESS", "FAILURE", "UNSTABLE"],
         "enumColors": {
           "SUCCESS": "green",
@@ -21,16 +21,16 @@
         "title": "Build URL",
         "description": "URL to the build"
       },
-      "buildDuration": {
-        "type": "number",
-        "title": "Build duration",
-        "description": "Duration of the build"
-      },
       "timestamp": {
         "type": "string",
         "format": "date-time",
         "title": "Timestamp",
         "description": "Last updated timestamp of the build"
+      },
+      "buildDuration": {
+        "type": "number",
+        "title": "Build Duration",
+        "description": "Duration of the build"
       }
     },
     "required": []
@@ -39,7 +39,7 @@
   "calculationProperties": {},
   "relations": {
     "jenkinsJob": {
-      "title": "Belongs to",
+      "title": "Jenkins Job",
       "target": "jenkinsJob",
       "required": false,
       "many": false
