--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_webhook_configuration.mdx
@@ -7,30 +7,32 @@
   "mappings": [
     {
       "blueprint": "jenkinsJob",
+      "filter": ".body.type | startswith(\"item\")",
       "entity": {
-        "identifier": ".body.name",
-        "title": ".body.build.notes",
+        "identifier": ".body.url | sub(\"%20\"; \"-\"; \"g\") | sub(\"/\"; \"-\"; \"g\") | .[:-1]",
+        "title": ".body.data.displayName",
         "properties": {
-          "jobName": ".body.display_name",
-          "jobUrl": ".body.url",
-          "jobStatus": ".body.build.phase",
-          "timestamp": ".body.build.timestamp"
+          "jobName": ".body.data.fullName",
+          "url": ".body.url",
+          "jobStatus": ".body.type | split(\".\") | last",
+          "timestamp": ".body.time"
         }
       }
     },
     {
       "blueprint": "jenkinsBuild",
+      "filter": ".body.type | startswith(\"run\")",
       "entity": {
-        "identifier": ".body.build.number",
-        "title": ".body.name + \" - \" + (.body.build.number | tostring)",
+        "identifier": ".body.data.fullDisplayName | sub(\" \"; \"-\"; \"g\") | sub(\"#\"; \"\"; \"g\")",
+        "title": ".body.data.displayName",
         "properties": {
-          "buildStatus": ".body.build.status",
-          "buildUrl": ".body.build.full_url",
-          "buildDuration": ".body.build.duration",
-          "timestamp": ".body.build.timestamp"
+          "buildStatus": ".body.data.result",
+          "buildUrl": ".body.url",
+          "buildDuration": ".body.data.duration",
+          "timestamp": ".body.data.timestamp"
         },
         "relations": {
-          "jenkinsJob": ".body.name | tostring"
+          "jenkinsJob": ".body.source | tostring | sub(\"%20\"; \"-\"; \"g\") | sub(\"/\"; \"-\"; \"g\") | .[:-1]"
         }
       }
     }
