--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_job_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_job_blueprint.mdx
@@ -8,29 +8,40 @@
     "properties": {
       "jobName": {
         "type": "string",
-        "title": "Project name"
+        "title": "Project Name"
       },
       "jobStatus": {
         "type": "string",
-        "title": "Job status",
-        "enum": ["QUEUED", "STARTED", "COMPLETED", "FINALIZED"]
-      },
-      "jobUrl": {
-        "type": "string",
-        "title": "Job URL",
-        "description": "URL of the job"
+        "title": "Job Status",
+        "enum": ["created", "updated", "deleted"],
+        "enumColors": {
+          "created": "green",
+          "updated": "yellow",
+          "deleted": "red"
+        }
       },
       "timestamp": {
         "type": "string",
         "format": "date-time",
         "title": "Timestamp",
         "description": "Last updated timestamp of the job"
+      },
+      "url": {
+        "type": "string",
+        "title": "Project URL"
       }
     },
     "required": []
   },
   "mirrorProperties": {},
-  "calculationProperties": {},
+  "calculationProperties": {
+    "jobUrl": {
+      "title": "Job Full URL",
+      "calculation": "'https://your_jenkins_url/' + .properties.url",
+      "type": "string",
+      "format": "url"
+    }
+  },
   "relations": {}
 }
 ```
