Fix issue building docs

--- a/docs/api-reference/api-reference.mdx
+++ b/docs/api-reference/api-reference.mdx
@@ -4,12 +4,6 @@ title: API Reference
 sidebar_label: 🧪 API Reference
 ---
 
-import ApiDocMdx from "@theme/ApiDocMdx";
-
 # 🧪 API Reference
 
-This page includes all of the API endpoints available in Port.
-
-Here you can learn how to interact with different Port components: blueprints, entities, relations, actions and more
-
-<ApiDocMdx id="port-api" />
+You can view and try out Port's REST API interface online by browsing to our [Swagger](https://api.getport.io)
