make changes to blueprint, add security config to webhook

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/datadog/_example_datadog_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/datadog/_example_datadog_alert_blueprint.mdx
@@ -15,7 +15,7 @@
         "type": "string",
         "title": "Details"
       },
-      "event_type": {
+      "eventType": {
         "type": "string",
         "title": "Event Type"
       },
@@ -27,11 +27,11 @@
         "type": "string",
         "title": "Creator"
       },
-      "alert_metric": {
+      "alertMetric": {
         "type": "string",
         "title": "Alert Metric"
       },
-      "alert_type": {
+      "alertType": {
         "type": "string",
         "title": "Alert Type",
         "enum": ["error", "warning", "success", "info"]
@@ -53,7 +53,7 @@
       "title": "Services",
       "target": "microservice",
       "required": false,
-      "many": true
+      "many": false
     }
   }
 }
