make changes to blueprint, and docs content

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/bitbucket/_example_bitbucket_push_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/bitbucket/_example_bitbucket_push_blueprint.mdx
@@ -6,7 +6,7 @@
   "icon": "Microservice",
   "schema": {
     "properties": {
-      "commit_hash": {
+      "commitHash": {
         "type": "string",
         "title": "Commit Hash"
       },
@@ -17,12 +17,12 @@
         "default": "https://bitbucket.org",
         "description": "the link to the repo in our BitBucket"
       },
-      "author": {
+      "commitAuthor": {
         "type": "string",
         "title": "Author"
       }
     },
-    "required": ["commit_hash"]
+    "required": ["commitHash"]
   },
   "mirrorProperties": {},
   "calculationProperties": {},
