--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/bitbucket/_example_bitbucket_push_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/bitbucket/_example_bitbucket_push_webhook_configuration.mdx
@@ -12,8 +12,8 @@
         "identifier": "latest_commit",
         "title": "Latest Commit",
         "properties": {
-          "commit_hash": ".body.push.changes[0].new.target.hash",
-          "author": ".body.push.changes[0].new.target.author.user.display_name",
+          "commitHash": ".body.push.changes[0].new.target.hash",
+          "commitAuthor": ".body.push.changes[0].new.target.author.user.display_name",
           "url": ".body.repository.links.html.href"
         }
       }
