remove security config in webhook

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/datadog/_example_datadog_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/datadog/_example_datadog_webhook_configuration.mdx
@@ -26,11 +26,6 @@
       }
     }
   ],
-  "security": {
-    "secret": "WEBHOOK_SECRET",
-    "signatureHeaderName": "X-Port-Signature",
-    "signatureAlgorithm": "sha256",
-    "signaturePrefix": ""
-  }
+  "security": {}
 }
 ```
