--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
@@ -5,5 +5,6 @@
 - [`workflow`](https://docs.github.com/en/rest/actions/workflows#get-a-workflow)
 - [`workflow-run`](https://docs.github.com/en/rest/actions/workflow-runs#get-a-workflow-run)
 - [`issue`](https://docs.github.com/en/rest/issues/issues#get-an-issue)
+- [`folder`](https://docs.github.com/en/rest/git/trees#get-a-tree)
 
 :::
