--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-folder/_git_exporter_example_folder_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-folder/_git_exporter_example_folder_blueprint.mdx
@@ -14,12 +14,14 @@
       },
       "link": {
         "title": "Link",
-        "type": "string"
+        "type": "string",
         "format": "url"
       },
-      "size": {
-        "title": "Size",
-        "type": "number"
+      "readme": {
+        "title": "README",
+        "type": "string",
+        "format": "markdown"
+      }
     },
     "required": []
   },
