--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-folder/_github_exporter_example_folder_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-folder/_github_exporter_example_folder_port_app_config.mdx
@@ -32,7 +32,7 @@ resources:
           blueprint: '"folder"'
           properties:
             sha: ".folder.sha"
-            link: .repo.html_url + "/" + .folder.path
+            link: .repo.html_url + "/tree/" + .repo.default_branch  + "/" + .folder.path
             readme: file://README.md
           relations:
             service: ".repo.name"
