--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-folder/_git_exporter_example_folder_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-folder/_git_exporter_example_folder_blueprint.mdx
@@ -27,13 +27,7 @@
   },
   "mirrorProperties": {},
   "calculationProperties": {},
-  "relations": {
-    "service": {
-      "target": "microservice",
-      "required": true,
-      "many": false
-    }
-  }
+  "relations": {}
 }
 ```
 
